# sctk-adwaita

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple.rs  window.rs
src/: buttons.rs  config.rs  decoration_surface.rs  font.rs  lib.rs  parts.rs  pointer.rs  renderer.rs  shadow.rs  surface.rs  theme.rs  title.rs  utils.rs  wl_typed.rs
src/minitype/: README.md  font.rs  geometry.rs  mod.rs  outliner.rs
src/title/: ab_glyph_renderer.rs  cosmic_text_renderer.rs  crossfont_renderer.rs  dumb.rs  font_fallback.rs  font_preference.rs  skrifa_renderer.rs
tests/: .gitignore
