[package]
name = "sctk-adwaita"
version = "0.11.0"
edition = "2021"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
keywords = ["sctk"]
license = "MIT"
repository = "https://github.com/PolyMeilex/sctk-adwaita"
documentation = "https://docs.rs/sctk-adwaita"
description = "Adwaita-like SCTK Frame"

exclude = [
    "tests/*",
]

[dependencies]
log = "0.4"
memmap2 = { version = "0.9.0", optional = true }
tiny-skia = { version = "0.12", default-features = false, features = [
  "std",
  "simd",
] }
smithay-client-toolkit = { version = "0.20.0", default-features = false }

# Draw title text using crossfont `--features crossfont`
crossfont = { version = "0.9.0", optional = true }
# Draw title text using ab_glyph `--features ab_glyph`
ab_glyph = { version = "0.2.17", optional = true }

[dev-dependencies]
tiny-skia = { version = "0.12", default-features = false, features = [
  "std",
  "png-format",
  "simd",
] }

[features]
default = ["ab_glyph"]
crossfont = ["dep:crossfont"]
ab_glyph = ["dep:ab_glyph", "memmap2"]
