[package]
name = "sctk-adwaita"
version = "0.12.0"
edition = "2021"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
keywords = ["sctk"]
license = "MIT"
repository = "https://github.com/PolyMeilex/sctk-adwaita"
documentation = "https://docs.rs/sctk-adwaita"
description = "Adwaita-like SCTK Frame"

exclude = [
    "tests/*",
]

[dependencies]
log = "0.4"
memmap2 = { version = "0.9.0", optional = true }
tiny-skia = { version = "0.12", default-features = false, features = [
  "std",
  "simd",
] }
smithay-client-toolkit = { git = "https://github.com/ids1024/client-toolkit", branch = "wayland-update", default-features = false }

# Draw title text using crossfont `--features crossfont`
crossfont = { version = "0.9.0", optional = true }
# Draw title text using ab_glyph `--features ab_glyph`
ab_glyph = { version = "0.2.17", optional = true }
# Draw title text using skrifa + tiny-skia `--features skrifa`
skrifa = { version = ">=0.40, <=0.44", optional = true }
# Draw title text using cosmic-text `--features cosmic-text`
cosmic-text = { version = "0.19.0", optional = true }

[dev-dependencies]
tiny-skia = { version = "0.12", default-features = false, features = [
  "std",
  "png-format",
  "simd",
] }

[features]
default = ["ab_glyph"]
crossfont = ["dep:crossfont"]
ab_glyph = ["dep:ab_glyph", "memmap2"]
skrifa = ["dep:skrifa", "memmap2"]
cosmic-text = ["dep:cosmic-text"]

[patch.crates-io]
wayland-client = { git = "https://github.com/smithay/wayland-rs" }
wayland-protocols = { git = "https://github.com/smithay/wayland-rs" }
wayland-protocols-wlr = { git = "https://github.com/smithay/wayland-rs" }
wayland-protocols-misc = { git = "https://github.com/smithay/wayland-rs" }
wayland-protocols-experimental = { git = "https://github.com/smithay/wayland-rs" }
wayland-cursor = { git = "https://github.com/smithay/wayland-rs" }
wayland-backend = { git = "https://github.com/smithay/wayland-rs" }
